支持发送图片

--- a/www/index.html
+++ b/www/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Socket.IO chat</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="style/index.css">
     <link rel="stylesheet" href="style/font-awesome-4.7.0/css/font-awesome.min.css">
   </head>
@@ -27,7 +28,8 @@
                     <input type="color" id="color" value="#000000">
                     <i title="双击取消选择" class="fa fa-smile-o" id="smile">
                     </i>
-                    <!-- <i class="fa fa-picture-o" id="img"></i> -->
+                    <input type="file" id="file">
+                    <i class="fa fa-picture-o" id="img"></i>
                     <div class="selectBox"> 
                       <div class="smile" id="smileDiv"> 
                         <p>经典表情</p>
