发送窗口震动

--- a/www/index.html
+++ b/www/index.html
@@ -26,7 +26,9 @@
               <form action="">
                   <div class="edit"> 
                     <input type="color" id="color" value="#000000">
-                    <i title="双击取消选择" class="fa fa-smile-o" id="smile">
+                    <i title="自定义字体颜色" id="font" class="fa fa-font">
+                    </i><i title="双击取消选择" class="fa fa-smile-o" id="smile">
+                    </i><i title="单击页面震动" id="shake" class="fa fa-bolt">
                     </i>
                     <input type="file" id="file">
                     <i class="fa fa-picture-o" id="img"></i>
